Added responsive styles for desktop version

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 @import "view.css";
 @import "tracking.css";
 @import "modifiers.css";
+@import "responsive/desktops.css";
 * {
     box-sizing: border-box;
 }
